--- a/orgware.org
+++ b/orgware.org
@@ -242,11 +242,15 @@ NOTE: `undo-fu' is required for Emacs < 28."
 
   ;; Enable familiar copy/paste keybindings
   (cua-mode t)
+  ;; Ctrl s for save
+  (local-set-key (kbd "C-s") #'save-buffer)
+  ;; Ctrl f for find aka isearch
+  (local-set-key (kbd "C-f") #'isearch-forward)
   ;; enable Cmd Shift Z for apple users Ctrl y for windows
   (when (fboundp #'undo-redo)
     (if (eq system-type 'darwin)
-        (local-set-key "C-Z" #'undo-redo)
-      (local-set-key "C-y" #'undo-redo)))
+        (local-set-key (kbd "C-Z") #'undo-redo)
+      (local-set-key (kbd "C-y") #'undo-redo)))
 
   ;; Move text smoothly when point is at top or bottom of buffer
   (setq-local scroll-conservatively 101)
@@ -1009,7 +1013,7 @@ All errors are silenced."
 This retains single confirmation at the entry point for the block."
   ;; TODO consider a header arg for a variant of this in org babel proper
   (interactive "P")
-  (let ((org-confirm-babel-evaluate (lambda (_l _b) nil)))
+  (let ((org-confirm-babel-evaluate (lambda (_l _b) nil))) ;; FIXME TODO set messages buffer size to nil
     (save-excursion
       (when (org-babel-find-named-block block-name)
         ;; goto won't raise an error which results in the block where
@@ -1018,6 +1022,7 @@ This retains single confirmation at the entry point for the block."
         (org-babel-goto-named-src-block block-name)
         (unwind-protect
             (progn
+              ;; FIXME optionally raise errors on failure here !?
               (advice-add #'org-babel-insert-result :around #'ow--results-silent)
               (org-babel-execute-src-block))
           (advice-remove #'org-babel-insert-result #'ow--results-silent))))))
